<?xml version="1.0" encoding="utf-8"?>



    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:overScrollMode="never"
        android:padding="0dp"
        android:scrollbars="none"
        android:fadingEdge="none" >

        <RelativeLayout
            android:id="@+id/weeklyCalendarRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp" >

            <LinearLayout
                android:id="@+id/calendarSplitterRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:padding="0dp" >

                <RelativeLayout
                    android:id="@+id/hoursRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="0dp"
                    android:orientation="vertical">

                    <include layout="@layout/calendar_zebra" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:text="@string/time00"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="60dp"
                        android:gravity="center"
                        android:text="@string/time01"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="120dp"
                        android:gravity="center"
                        android:text="@string/time02"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="180dp"
                        android:gravity="center"
                        android:text="@string/time03"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="240dp"
                        android:gravity="center"
                        android:text="@string/time04"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="300dp"
                        android:gravity="center"
                        android:text="@string/time05"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="360dp"
                        android:gravity="center"
                        android:text="@string/time06"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="420dp"
                        android:gravity="center"
                        android:text="@string/time07"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="480dp"
                        android:gravity="center"
                        android:text="@string/time08"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="540dp"
                        android:gravity="center"
                        android:text="@string/time09"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="600dp"
                        android:gravity="center"
                        android:text="@string/time10"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="660dp"
                        android:gravity="center"
                        android:text="@string/time11"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="720dp"
                        android:gravity="center"
                        android:text="@string/time12"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="780dp"
                        android:gravity="center"
                        android:text="@string/time13"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="840dp"
                        android:gravity="center"
                        android:text="@string/time14"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="900dp"
                        android:gravity="center"
                        android:text="@string/time15"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="960dp"
                        android:gravity="center"
                        android:text="@string/time16"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1020dp"
                        android:gravity="center"
                        android:text="@string/time17"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1080dp"
                        android:gravity="center"
                        android:text="@string/time18"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1140dp"
                        android:gravity="center"
                        android:text="@string/time19"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1200dp"
                        android:gravity="center"
                        android:text="@string/time20"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1260dp"
                        android:gravity="center"
                        android:text="@string/time21"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1320dp"
                        android:gravity="center"
                        android:text="@string/time22"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1380dp"
                        android:gravity="center|top"
                        android:text="@string/time23"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/dailyRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14" >

                    <include layout="@layout/calendar_zebra" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>